; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libprocstat/extr_libprocstat.c_procstat_getrlimit.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libprocstat/extr_libprocstat.c_procstat_getrlimit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.procstat = type { i32, i32, i32 }
%struct.kinfo_proc = type { i32 }
%struct.rlimit = type { i32 }

@.str = private unnamed_addr constant [26 x i8] c"unknown access method: %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @procstat_getrlimit(%struct.procstat* %0, %struct.kinfo_proc* %1, i32 %2, %struct.rlimit* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.procstat*, align 8
  %7 = alloca %struct.kinfo_proc*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.rlimit*, align 8
  store %struct.procstat* %0, %struct.procstat** %6, align 8
  store %struct.kinfo_proc* %1, %struct.kinfo_proc** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.rlimit* %3, %struct.rlimit** %9, align 8
  %10 = load %struct.procstat*, %struct.procstat** %6, align 8
  %11 = getelementptr inbounds %struct.procstat, %struct.procstat* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  switch i32 %12, label %35 [
    i32 129, label %13
    i32 128, label %21
    i32 130, label %28
  ]

13:                                               ; preds = %4
  %14 = load %struct.procstat*, %struct.procstat** %6, align 8
  %15 = getelementptr inbounds %struct.procstat, %struct.procstat* %14, i32 0, i32 2
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.kinfo_proc*, %struct.kinfo_proc** %7, align 8
  %18 = load i32, i32* %8, align 4
  %19 = load %struct.rlimit*, %struct.rlimit** %9, align 8
  %20 = call i32 @procstat_getrlimit_kvm(i32 %16, %struct.kinfo_proc* %17, i32 %18, %struct.rlimit* %19)
  store i32 %20, i32* %5, align 4
  br label %40

21:                                               ; preds = %4
  %22 = load %struct.kinfo_proc*, %struct.kinfo_proc** %7, align 8
  %23 = getelementptr inbounds %struct.kinfo_proc, %struct.kinfo_proc* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = load i32, i32* %8, align 4
  %26 = load %struct.rlimit*, %struct.rlimit** %9, align 8
  %27 = call i32 @procstat_getrlimit_sysctl(i32 %24, i32 %25, %struct.rlimit* %26)
  store i32 %27, i32* %5, align 4
  br label %40

28:                                               ; preds = %4
  %29 = load %struct.procstat*, %struct.procstat** %6, align 8
  %30 = getelementptr inbounds %struct.procstat, %struct.procstat* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* %8, align 4
  %33 = load %struct.rlimit*, %struct.rlimit** %9, align 8
  %34 = call i32 @procstat_getrlimit_core(i32 %31, i32 %32, %struct.rlimit* %33)
  store i32 %34, i32* %5, align 4
  br label %40

35:                                               ; preds = %4
  %36 = load %struct.procstat*, %struct.procstat** %6, align 8
  %37 = getelementptr inbounds %struct.procstat, %struct.procstat* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @warnx(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i32 %38)
  store i32 -1, i32* %5, align 4
  br label %40

40:                                               ; preds = %35, %28, %21, %13
  %41 = load i32, i32* %5, align 4
  ret i32 %41
}

declare dso_local i32 @procstat_getrlimit_kvm(i32, %struct.kinfo_proc*, i32, %struct.rlimit*) #1

declare dso_local i32 @procstat_getrlimit_sysctl(i32, i32, %struct.rlimit*) #1

declare dso_local i32 @procstat_getrlimit_core(i32, i32, %struct.rlimit*) #1

declare dso_local i32 @warnx(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
